<resources>
    <string name="app_name">SuDiet</string>
    <string name="intro_head_1">SuDiet</string>
    <string name="intro_head_2">B.P Chart for All</string>
    <string name="intro_head_3">Healthy Diet Tips</string>
    <string name="into_desc_1">SuDiet application helps you to track your diabetes and blood pressue,while
        giving the best medication and diet suggestions.</string>
    <string name="into_desc_2">The Sugar levels and blood pressure datas are displayed in charts for better
        understanding.</string>
    <string name="into_desc_3">The Diet and Medication tips are given based on the health condition.</string>
    <string name="btnString_next">Skip</string>
    <string name="btnString_back">Back</string>
    <string name="btnString_finish">Finish</string>
    <string name="title_activity_main3">SuDiet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">arunkumar@bharath.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="dash_myAccount">My Account</string>
    <string name="dash_Learn">Learn</string>
    <string name="dash_Chart">Chart</string>
    <string name="dash_Diet">Diet/Nutrition</string>
    <string name="dash_Med">Medication</string>
    <string name="dash_content_one">View your profile and suggestion here.</string>
    <string name="dash_content_two">Know most important details about diabetes</string>
    <string name="dash_content_three">Blood pressure chart with levels.</string>
    <string name="dash_content_four">Get your diet and nutrition</string>
    <string name="dash_content_five">The best medication available to you</string>
    <string name="nav_others">Others</string>
    <string name="nav_about">About</string>
    <string name="nav_exit">Exit</string>
    <string name="login_password_hint">Enter Your Password</string>
    <string name="login_Login_btn">Login</string>
    <string name="login_signup_prompt">Not an user? Sign up</string>
    <string name="login_header">LOGIN</string>
    <string name="login_email_hint">Enter Your Emain</string>
    <string name="signup_login_prompt">Already an user? Login</string>
    <string name="signup_confirm_pwd">Confirm Your Password</string>
    <string name="dash_Diet_explore">Explore  diet/nutrition</string>
    <string name="dash_Med_explore">Explore  medication</string>
    <string name="signup_header">Signup for Free</string>
    <string name="signup_name_prompt">Enter Your Name</string>
    <string name="signup_dob_hint">Date of birth</string>
    <string name="signup_name_hint">Enter your name</string>
    <string name="signup_button">Signup</string>
    <string name="signup_weight_hint">Enter your Weight</string>
    <string name="signup_height_hint">Enter your height</string>
    <string name="error_valid_email_password">Incorrect password or email</string>
    <string name="error_message_email">Please fill correctly</string>
    <string name="error_email_exists">Duplicate email</string>
    <string name="success_message">Success</string>
    <string name="error_password_match">not matching</string>
    <string name="error_message_password">invalid password</string>
    <string name="error_message_name">invalid name</string>
    <string name="action_settings">Settings</string>
    <string name="action_feedback">Send feedback</string>
    <string name="action_invite">Invite a friend</string>
    <string name="tab_overview">Overview</string>
    <string name="tab_history">History</string>
    <string name="tab_tips">Tips</string>
    <string name="activity_main_add_new_reading">Add new reading</string>
    <string name="title_activity_hello">Hello.</string>
    <string name="helloactivity_headline">Hello.</string>
    <string name="helloactivity_terms">Terms of Use</string>
    <string name="helloactivity_subhead">We just need a few quick things before getting you started.</string>
    <string name="helloactivity_country">Country</string>
    <string name="helloactivity_age">Age</string>
    <string name="helloactivity_age_invalid">Please enter a valid age.</string>
    <string name="helloactivity_gender">Gender</string>
    <string name="helloactivity_gender_list_1">Male</string>
    <string name="helloactivity_gender_list_2">Female</string>
    <string name="helloactivity_gender_list_3">Other</string>
    <string-array name="helloactivity_gender_list" translatable="false">
        <item>@string/helloactivity_gender_list_1</item>
        <item>@string/helloactivity_gender_list_2</item>
        <item>@string/helloactivity_gender_list_3</item>
    </string-array>
    <string name="helloactivity_spinner_diabetes_type">Diabetes type</string>
    <string name="helloactivity_spinner_diabetes_type_1">Type 1</string>
    <string name="helloactivity_spinner_diabetes_type_2">Type 2</string>
    <string name="helloactivity_spinner_diabetes_gdm">Gestational</string>
    <string name="helloactivity_spinner_diabetes_lada">LADA</string>
    <string-array name="helloactivity_diabetes_type" translatable="false">
        <item>@string/helloactivity_spinner_diabetes_type_1</item>
        <item>@string/helloactivity_spinner_diabetes_type_2</item>
        <item>@string/helloactivity_spinner_diabetes_gdm</item>
        <item>@string/helloactivity_spinner_diabetes_lada</item>
    </string-array>
    <string name="helloactivity_spinner_preferred_glucose_unit">Preferred Glucose unit</string>
    <string name="helloactivity_spinner_preferred_glucose_unit_1">mg/dL</string>
    <string name="helloactivity_spinner_preferred_glucose_unit_2">mmol/L</string>
    <string-array name="helloactivity_preferred_glucose_unit" translatable="false">
        <item>@string/helloactivity_spinner_preferred_glucose_unit_1</item>
        <item>@string/helloactivity_spinner_preferred_glucose_unit_2</item>
    </string-array>
    <string name="preferences_spinner_preferred_a1c_unit">Preferred HbA1c unit</string>
    <string name="preferences_spinner_preferred_a1c_unit_1">percentage</string>
    <string name="preferences_spinner_preferred_a1c_unit_2">mmol/mol</string>
    <string-array name="preferences_preferred_a1c_unit" translatable="false">
        <item>@string/preferences_spinner_preferred_a1c_unit_1</item>
        <item>@string/preferences_spinner_preferred_a1c_unit_2</item>
    </string-array>
    <string name="preferences_spinner_preferred_weight_unit">Preferred Weight unit</string>
    <string name="preferences_spinner_preferred_weight_unit_1">kilograms</string>
    <string name="preferences_spinner_preferred_weight_unit_2">pounds</string>
    <string-array name="preferences_preferred_weight_unit" translatable="false">
        <item>@string/preferences_spinner_preferred_weight_unit_1</item>
        <item>@string/preferences_spinner_preferred_weight_unit_2</item>
    </string-array>
    <string name="helloactivity_share_data">Share anonymous data for research.</string>
    <string name="helloactivity_hint_settings">You can change these in settings later.</string>
    <string name="helloactivity_button_next">NEXT</string>
    <string name="helloactivity_button_start">GET STARTED</string>
    <string name="fragment_empty_text">No info available yet. \n Add your first reading here.</string>
    <string name="dialog_add_title">Add Blood Glucose Level</string>
    <string name="dialog_add_concentration">Concentration</string>
    <string name="dialog_add_concentration_um" translatable="false">mg/dL</string>
    <string name="dialog_add_date">Date</string>
    <string name="dialog_add_time">Time</string>
    <string name="dialog_add_measured">Measured</string>
    <string name="dialog_add_type_1">Before breakfast</string>
    <string name="dialog_add_type_2">After breakfast</string>
    <string name="dialog_add_type_3">Before lunch</string>
    <string name="dialog_add_type_4">After lunch</string>
    <string name="dialog_add_type_5">Before dinner</string>
    <string name="dialog_add_type_6">After dinner</string>
    <string name="dialog_add_type_7">Snack</string>
    <string name="dialog_add_type_8">Bedtime</string>
    <string name="dialog_add_type_9">Night</string>
    <string name="dialog_add_type_10">Fasting glucose</string>
    <string name="dialog_add_type_11">Recheck</string>
    <string name="dialog_add_type_12">Other</string>
    <string-array name="dialog_add_measured_list" translatable="false">
        <item>@string/dialog_add_type_1</item>
        <item>@string/dialog_add_type_2</item>
        <item>@string/dialog_add_type_3</item>
        <item>@string/dialog_add_type_4</item>
        <item>@string/dialog_add_type_5</item>
        <item>@string/dialog_add_type_6</item>
        <item>@string/dialog_add_type_7</item>
        <item>@string/dialog_add_type_8</item>
        <item>@string/dialog_add_type_9</item>
        <item>@string/dialog_add_type_10</item>
        <item>@string/dialog_add_type_11</item>
        <item>@string/dialog_add_type_12</item>
    </string-array>
    <string name="dialog_add_cancel">CANCEL</string>
    <string name="dialog_add_add">ADD</string>
    <string name="dialog_error2">Please enter a valid value.</string>
    <string name="dialog_error">Please fill all the fields.</string>
    <string name="dialog_edit">Edit</string>
    <string name="dialog_delete">Delete</string>
    <string name="fragment_history_snackbar_text">1 reading deleted</string>
    <string name="fragment_history_snackbar_action">UNDO</string>
    <string name="fragment_overview_last_reading">Last check:</string>
    <string name="fragment_overview_trend">Trend over past month:</string>
    <string name="fragment_overview_trend_positive">in range and healthy</string>
    <string name="fragment_overview_selector_month">Month</string>
    <string name="fragment_overview_selector_day">Day</string>
    <string name="fragment_overview_selector_week">Week</string>
    <string-array name="fragment_overview_selector_range" translatable="false">
        <item>@string/fragment_overview_selector_day</item>
        <item>@string/fragment_overview_selector_week</item>
        <item>@string/fragment_overview_selector_month</item>
    </string-array>
    <string-array name="fragment_overview_selector_metric" translatable="false">
        <item>@string/fab_glucose</item>
        <item>@string/fab_HB1AC</item>
        <item>@string/fab_cholesterol</item>
        <item>@string/fab_pressure</item>
        <item>@string/fab_ketones</item>
        <item>@string/fab_weight</item>
    </string-array>
    <string name="tip_example" translatable="false">Use less cheese in your recipes and meals. Fresh mozzarella packed in water and Swiss cheese are usually lower in sodium.</string>
    <string name="preferences_about">About</string>
    <string name="preferences_experimental_title" translatable="false">Here be dragons :/</string>
    <string name="preferences_experimental">These features are experimental and may not fully work and are for early testing by users. Remember that you can shake your phone to send us feedback.</string>
    <string name="version" translatable="false">1.5.0 (Vindaloo)</string>
    <string name="preferences_version">Version</string>
    <string name="preferences_coming_soon">Coming soon...</string>
    <string name="preferences_terms">Terms of use</string>
    <string name="reading_ok">OK</string>
    <string name="reading_hypo">Hypoglycemia</string>
    <string name="reading_low">Low</string>
    <string name="reading_high">High</string>
    <string name="reading_hyper">Hyperglycemia</string>
    <string name="fab_weight">Body Weight</string>
    <string name="fab_pressure">Blood Pressure</string>
    <string name="fab_HB1AC">HbA1c Reading</string>
    <string name="fab_glucose">Blood Glucose Level</string>
    <string name="overview_hb1ac">HbA1c:</string>
</resources>