<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <Spinner
        android:id="@+id/history_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/history_spinner"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/fragment_history_legend"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="8dp"
                    android:layout_height="8dp"
                    android:layout_marginRight="4dp"
                    android:background="@drawable/circle_hypo_filled" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="8dp"
                    android:paddingTop="2px"
                    android:text="@string/reading_hypo"
                    android:textColor="@color/glucosio_reading_hypo"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="8dp"
                    android:layout_height="8dp"
                    android:layout_marginRight="4dp"
                    android:background="@drawable/circle_low_filled" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="8dp"
                    android:paddingTop="2px"
                    android:text="@string/reading_low"
                    android:textColor="@color/glucosio_reading_low"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="8dp"
                    android:layout_height="8dp"
                    android:layout_marginRight="4dp"
                    android:background="@drawable/circle_ok_filled" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="8dp"
                    android:paddingTop="2px"
                    android:text="@string/reading_ok"
                    android:textColor="@color/glucosio_reading_ok"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="8dp"
                    android:layout_height="8dp"
                    android:layout_marginRight="4dp"
                    android:background="@drawable/circle_high_filled" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="8dp"
                    android:paddingTop="2px"
                    android:text="@string/reading_high"
                    android:textColor="@color/glucosio_reading_high"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="8dp"
                    android:layout_height="8dp"
                    android:layout_marginRight="4dp"
                    android:background="@drawable/circle_hyper_filled" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="8dp"
                    android:paddingTop="2px"
                    android:text="@string/reading_hyper"
                    android:textColor="@color/glucosio_reading_hyper"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="2px"
            android:layout_marginTop="16dp"
            android:background="#DADADA" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/fragment_history_recycler_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:paddingBottom="32dp"
            android:scrollbars="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="com.androidproject.sudiet.fragment.HistoryFragment" />

    </LinearLayout>

</RelativeLayout>